--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     }
   ],
   "dependencies": {
-    "codemirror": "^5.21.0",
     "crel": "^3.0.0",
     "prosemirror-collab": "^1.0.0",
     "prosemirror-commands": "^1.0.0",
@@ -35,7 +34,6 @@
     "getdocs": "^0.6.0",
     "markdown-it": "^8.4.0",
     "markdown-it-deflist": "^2.0.0",
-    "moduleserve": "^0.8.0",
     "mold-template": "^2.0.0",
     "punycode": "^1.4.0",
     "rollup": "^0.50.0",
@@ -43,8 +41,7 @@
     "rollup-plugin-commonjs": "^8.2.0",
     "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-uglify": "^2.0.1",
-    "tariff": "0.1.0"
+    "rollup-plugin-uglify": "^2.0.1"
   },
   "scripts": {
     "start": "node src/collab/server/start.js",
