--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     }
   ],
   "dependencies": {
+    "client-sessions": "^0.8.0",
     "crel": "^3.0.0",
     "negotiator": "^0.6.1",
     "prosemirror-collab": "^1.0.0",
